[package]
name = "specs_declaration"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = """
A simple macro to effectively create SPECS systems.
"""
keywords = ["ecs", "macro", "util"]
repository = "https://github.com/jojolepro/specs_declaration"
license = "GPL-3.0-only"
exclude = ["doc"]

[dev-dependencies]
specs = "0.16.1"
